--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.13.1",
+    "axios": "^0.21.1",
     "core-js": "^3.8.3",
     "nuxt": "^2.14.12",
     "vue-scrollto": "^2.20.0"
