chore(ci/cd): added eslint & prettier

--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "nuxt-vite": "0.0.22",
     "postcss": "^7",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
-    "vue-jest": "^3.0.4"
+    "vue-jest": "^3.0.4",
+    "eslint": "latest",
+    "prettier": "latest"
   }
 }
