--- a/package.json
+++ b/package.json
@@ -18,17 +18,19 @@
   },
   "devDependencies": {
     "@nuxtjs/color-mode": "^2.0.4",
+    "@nuxtjs/eslint-config": "^6.0.0",
     "@nuxtjs/tailwindcss": "^3.4.2",
     "@vue/test-utils": "^1.1.2",
     "autoprefixer": "^9",
     "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
+    "eslint": "latest",
     "jest": "^26.6.3",
     "nuxt-vite": "0.0.22",
     "postcss": "^7",
+    "prettier": "latest",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
-    "vue-jest": "^3.0.4",
-    "eslint": "latest",
-    "prettier": "latest"
+    "vue-jest": "^3.0.4"
   }
 }
