--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,27 +1,14 @@
 name: Lint
-
-on: push
-
+on: [push]
 jobs:
-  run-linters:
-    name: Run linters
+  build:
+    name: Test
     runs-on: ubuntu-latest
-
     steps:
-      - name: Check out Git repository
-        uses: actions/checkout@v2
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v1
+      - uses: actions/checkout@v1
+      - uses: borales/actions-yarn@v2.0.0
         with:
-          node-version: 12
-
-      # ESLint and Prettier must be in `package.json`
-      - name: Install Node.js dependencies
-        run: npm i
-
-      - name: Run linters
-        uses: wearerequired/lint-action@v1
+          cmd: install # will run `yarn install` command
+      - uses: borales/actions-yarn@v2.0.0
         with:
-          eslint: true
-          prettier: true
+          cmd: lintfix
